--- a/A1Evo.html
+++ b/A1Evo.html
@@ -2031,7 +2031,7 @@ async function setVolumeLevels() {
   }
   await postNext('Add SPL offset', nSpeakers + 2, {offset: -differences.at(-1)});
   await postNext('Calculate target level', nSpeakers + 2);
-  targetLevel = 75.0;
+  targetLevel = await fetchSafe(`${nSpeakers + 2}/target-level`);
   responseTarget = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, nSpeakers + 2);
   dataTarget = new DataView(Uint8Array.from(atob(responseTarget.magnitude), c => c.charCodeAt(0)).buffer);
   console.info(`Final target level:: ${targetLevel.toFixed(5)}dB`);
